<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewIcone"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/semanal" />

        <TextView
            android:id="@+id/textAdd"
            android:layout_width="273dp"
            android:layout_height="110dp"
            android:text="@string/adicione"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextQuant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quantidade"
        android:inputType="none"
        android:textAlignment="center" />

</LinearLayout>